# AI-assistant-for-work-chats

./: .gitignore  Dockerfile  README.md  docker-compose.yml  draft.ipynb  env.example  pyproject.toml  requirements.txt
alembic/: env.py
api/handlers/: main.py
app/: main.py
app/db/: database.py
app/models/: messages.py
app/repositories/: message_repository.py
app/schemas/: examples.py  tg_update.py
bot/: Dockerfile  bot.py  pyproject.toml  requirements.txt
bot/src/bot_app/: bot_main.py
bot/src/bot_app/api/: api.py
bot/src/bot_app/commands/: draft.py  search.py  summary.py
bot/src/bot_app/routers/: main_subrouter.py
bot/tgbot/: main_subrouter.py  stats.py  summary.py
chroma/: main.py
response-draft-generator/: model.py
saver/: Dockerfile  Makefile  alembic.ini  pyproject.toml
saver/app/api/routes/: messages.py  updates.py
saver/app/core/: config.py
saver/app/repositories/: update_repository.py
saver/src/saver_app/: main.py
saver/src/saver_app/api/routes/: chats.py  messages.py  updates.py  users.py
saver/src/saver_app/core/: config.py
saver/src/saver_app/db/: database.py
saver/src/saver_app/db/migrations/: env.py
saver/src/saver_app/db/migrations/versions/: 51302249d6a2_added_optional_username_to_messages_.py
saver/src/saver_app/migrations/: env.py
saver/src/saver_app/migrations/versions/: cc06ea481a93_create_table_messages_without_encryption.py
saver/src/saver_app/models/: messages.py
saver/src/saver_app/repositories/: message_repository.py  update_repository.py
saver/src/saver_app/schemas/: TelegramApiDtos.py  tg_update.py
saver/src/saver_app/services/: message_service.py  update_service.py
summarization/: app.py  db_client.py  main.py  requirements.txt  summarization_model.py
summarizer/: Dockerfile  app.py  message.py  requirements.txt
