[project]
name = "repo_setup"
version = "0.1.0"
requires-python = ">=3.12"

dynamic = ["dependencies"]

[dependency-groups]
dev = [
  "pytest>=8.4",
  "ruff>=0.13",
  "black>=24.0",
  "mypy>=1.8",
]

[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = ">=3.12"
messages-saver-service = { path = "saver", develop = true }
bot-app = { path = "bot", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
