[project]
name = "ai-assistant-for-work-chats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "requests>=2.32.5",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]
