[project]
name = "ai-assistant-for-work-chats"
version = "0.1.0"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[dependency-groups]
dev = [
  "pytest>=8.4",
  "ruff>=0.13",
  "black>=24.0",
  "mypy>=1.8",
    "fastapi>=0.118.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "protobuf>=6.33.0",
    "requests>=2.32.5",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]

[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = ">=3.12"
messages-saver-service = { path = "saver", develop = true }
bot-app = { path = "bot", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
